Autoplay: no longer show a console warning when attempting to play without a user gesture.

We already reject a promise which will create a console error if
handled. When not handled, it means that the website is in control and
we should not pollute the console.

Bug: 777609
Change-Id: Ib59947a83c675660d3f2ab423ade0b24b8b31a89
Reviewed-on: https://chromium-review.googlesource.com/735326
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511503}
Former-commit-id: bdc4ef0f025c58da727360775b515e1fa9f80d43